--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="stylesheet" href="assets/bootstrap-5.1.3-dist/css/bootstrap.css">
 </head>
-<body>
+<body style="background-color:#DBFCFC;">
   <app-root></app-root>
   <script src="assets/bootstrap-5.1.3-dist/js/bootstrap.js"></script>
 </body>
